# starting-ragchatbot-codebase

./: CLAUDE.md  format.sh  pyproject.toml  quality.sh
backend/: TEST_FINDINGS.md  ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  test_validation.py  vector_store.py
backend/tests/: conftest.py
backend/tests/diagnostics/: __init__.py  test_chromadb_state.py  test_env_configuration.py
backend/tests/integration/: test_api_endpoints.py  test_rag_system_query.py
backend/tests/unit/: test_ai_generator.py  test_course_search_tool.py  test_vector_store.py
frontend/: index.html  script.js  style.css
