[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
# Test discovery patterns
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-v",                        # Verbose output
    "--tb=short",                # Shorter traceback format
    "--strict-markers",          # Raise error on unknown markers
    "--disable-warnings",        # Disable warnings in output
    "-ra",                       # Show summary of all test outcomes
]

# Asyncio configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Coverage options (optional, uncomment to enable)
# addopts = [
#     "--cov=backend",
#     "--cov-report=term-missing",
#     "--cov-report=html",
# ]

# Markers for categorizing tests
markers = [
    "unit: Unit tests that test individual components in isolation",
    "integration: Integration tests that test component interactions",
    "slow: Tests that take a long time to run",
    "diagnostics: Diagnostic tests for debugging system state",
]

# Ignore specific warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:resource_tracker.*:UserWarning",
]
